fix(zodiaclist): Change background color of ZodiacSignList to improve visibility in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header{
     padding: 8px 12px;
     margin-left: 800px;
     border-radius: 5px;
-    background-color: rgb(227, 227, 227);
+    background-color: rgba(0, 0, 0, 0.662);
     transition: background-color 0.3s ease;
 }
 .navbar #Home:hover{
